Fix dropdown, notifications, avatar, side nav expand collapse, and styles

--- a/app/assets/stylesheets/maestro/themes/targetsolutions_theme.scss
+++ b/app/assets/stylesheets/maestro/themes/targetsolutions_theme.scss
@@ -266,6 +266,11 @@ body {
         display: block;
       }
     }
+
+    img {
+      height: 200px;
+      width: 241px;
+    }
   }
 
   #footer {
